objects/ssot__PersonalizationPoint__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AbnExperimentId__c</fullName>
        <label>Experiment</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Personalization Point Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__MaxItemsCount__c</fullName>
        <label>MaxItems Count</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PersonalizationPointSource__c</fullName>
        <label>Personalization Point Source</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PersonalizationPointStatus__c</fullName>
        <label>Personalization Point Status</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PersonalizationSchemaId__c</fullName>
        <label>Personalization Schema</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PersonalizationSchemaName__c</fullName>
        <label>Personaliztion Schema Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PersonalizationSchemaType__c</fullName>
        <label>Personalization Schema Type</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PersonalizationType__c</fullName>
        <label>Personalization Type</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProfileDataGraphId__c</fullName>
        <label>Profile Data Graph</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RootPersonalizationPointId__c</fullName>
        <label>Root Personalization Point</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1711101251880_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PersonalizationPoint_Personalization_rel</label>
        <referenceTo>ssot__PersonalizationSchema__dlm</referenceTo>
        <relationshipLabel>PersonalizationPoint_Personalization_rel</relationshipLabel>
        <relationshipName>rel_1711101251880_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1720842261560_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PersonalizationPoint_RootPersonaliza_rel</label>
        <referenceTo>ssot__PersonalizationPoint__dlm</referenceTo>
        <relationshipLabel>PersonalizationPoint_RootPersonaliza_rel</relationshipLabel>
        <relationshipName>rel_1720842261560_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1726212146129_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PersonalizationPoint_AbnExperimentId_rel</label>
        <referenceTo>ssot__AbnExperiment__dlm</referenceTo>
        <relationshipLabel>PersonalizationPoint_AbnExperimentId_rel</relationshipLabel>
        <relationshipName>rel_1726212146129_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>